- uk editor 고도화 작업

--- a/assets/01-html/09-forms/03-input_element_part1.html
+++ b/assets/01-html/09-forms/03-input_element_part1.html
@@ -49,7 +49,7 @@
 				<b class="font-16 t_black">type 속성에 사용되는 값은 다음과 같습니다.</b>
 				<ol class="indent">
 					<!-- text -->
-					<li class="tit_h4 mt_ml t_black">
+					<li class="tit_h4 mt_ml">
 						<h4>text : <span class="t_blue">&lt;input type="text"&gt;</span></h4>
 						<p class="mt_ms">
 							type 속성의 기본값으로, 한 줄로 된 텍스트 필드를 정의합니다. 줄 바꿈은 입력값에서 자동으로 제거됩니다.<br>
@@ -71,7 +71,7 @@
 					</li>
 
 					<!-- password -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4>password : <span class="t_blue">&lt;input type="password"&gt;</span></h4>
 						<p class="mt_ms">
 							암호화된 내용을 입력할 수 있는 입력 필드를 정의합니다.<br>
@@ -103,7 +103,7 @@
 					</li>
 
 					<!-- checkbox -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4>checkbox : <span class="t_blue">&lt;input type="checkbox"&gt;</span></h4>
 						<p class="mt_ms">
 							체크박스(checkbox)를 정의합니다. 기본적으로 활성화 될 때 선택(체크)되는 사각형 상자로 렌더링됩니다.
@@ -132,7 +132,7 @@
 					</li>
 
 					<!-- radio -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4>radio : <span class="t_blue">&lt;input type="radio"&gt;</span></h4>
 						<p class="mt_ms">
 							라디오 버튼(radio button)을 정의합니다.<br>
@@ -155,7 +155,7 @@
 					</li>
 
 					<!-- file -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4>file : <span class="t_blue">&lt;input type="file"&gt;</span></h4>
 						<p class="mt_ms">
 							로드할 파일을 선택할 수 있는 입력 필드와 &quot;파일 선택&quot; 버튼을 정의합니다.<br>
@@ -178,7 +178,7 @@
 					</li>
 
 					<!-- reset -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4>reset : <span class="t_blue">&lt;input type="reset"&gt;</span></h4>
 						<p class="mt_ms">
 							리셋 버튼(reset button)을 정의합니다.<br>
@@ -200,7 +200,7 @@
 					</li>
 
 					<!-- submit -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4>submit : <span class="t_blue">&lt;input type="submit"&gt;</span></h4>
 						<p class="mt_ms">
 							서버의 폼 핸들러(form handler)로 폼 데이터(form date)를 전송하는 제출 버튼(submit button)을 정의합니다.<br>
@@ -226,7 +226,7 @@
 					</li>
 
 					<!-- image -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4>image : <span class="t_blue">&lt;input type="image" src="이미지 경로" alt="대체 텍스트"&gt;</span></h4>
 						<p class="mt_ms">
 							제출 버튼(submit button)으로 사용될 이미지를 정의합니다.<br>
@@ -249,7 +249,7 @@
 					</li>
 
 					<!-- button -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4>button : <span class="t_blue">&lt;input type="button" value="버튼명"&gt;</span></h4>
 						<p class="mt_ms">
 							클릭할 수 있는 버튼을 정의합니다.<br>
@@ -284,7 +284,7 @@
 					</li>
 
 					<!-- hidden -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4>hidden : <span class="t_blue">&lt;input type="hidden"&gt;</span></h4>
 						<p class="mt_ms">
 							사용자에게는 보이지 않는 숨겨진 입력 필드를 정의합니다.<br>
@@ -314,7 +314,7 @@
 					</li>
 
 					<!-- color -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4><span class="t_black html5_small">color</span> : <span class="t_blue">&lt;input type="color" value="#000000"&gt;</span></h4>
 						<p class="mt_ms">
 							색을 선택할 수 있는 입력 필드(color picker)를 정의합니다.<br>
@@ -337,7 +337,7 @@
 					</li>
 
 					<!-- email -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4><span class="t_black html5_small">email</span> : <span class="t_blue">&lt;input type="email" multiple&gt;</span></h4>
 						<p class="mt_ms">
 							전자 메일 주소를 입력할 수 있는 입력 필드를 정의합니다.<br>
@@ -389,7 +389,7 @@
 					</li>
 
 					<!-- number -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4><span class="t_black html5_small">number</span> : <span class="t_blue">&lt;input type="number"&gt;</span></h4>
 						<p class="mt_ms">
 							숫자를 입력할 수 있는 입력 필드를 정의합니다.<br>
@@ -427,7 +427,7 @@
 					</li>
 
 					<!-- range -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4><span class="t_black html5_small">range</span> : <span class="t_blue">&lt;input type="range"&gt;</span></h4>
 						<p class="mt_ms">
 							슬라이드 바를 조정하여 범위 내의 숫자를 선택할 수 있는 입력 필드를 정의합니다.<br>
@@ -465,7 +465,7 @@
 					</li>
 
 					<!-- search -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4><span class="t_black html5_small">search</span> : <span class="t_blue">&lt;input type="search" name="q"&gt;</span></h4>
 						<p class="mt_ms">
 							검색어를 입력할 수 있는 텍스트 필드를 정의합니다.<br>
@@ -489,7 +489,7 @@
 					</li>
 
 					<!-- tel -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4><span class="t_black html5_small">tel</span> : <span class="t_blue">&lt;input type="tel"&gt;</span></h4>
 						<p class="mt_ms">
 							전화번호를 입력할 수 있는 입력 필드를 정의합니다.<br>
@@ -521,7 +521,7 @@
 					</li>
 
 					<!-- url -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4><span class="t_black html5_small">url</span> : <span class="t_blue">&lt;input type="url"&gt;</span></h4>
 						<p class="mt_ms">
 							URL 주소를 입력할 수 있는 입력 필드를 정의합니다.<br>
@@ -570,7 +570,7 @@
 					</li>
 
 					<!-- time -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4><span class="t_black html5_small">time</span> : <span class="t_blue">&lt;input type="time"&gt;</span></h4>
 						<p class="mt_ms">
 							시간을 선택할 수 있는 입력 필드를 정의합니다.(hour, minute)<br>
@@ -605,7 +605,7 @@
 					</li>
 
 					<!-- date -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4><span class="t_black html5_small">date</span> : <span class="t_blue">&lt;input type="date"&gt;</span></h4>
 						<p class="mt_ms">
 							날짜를 선택할 수 있는 입력 필드를 정의합니다.(year, month, day)<br>
@@ -628,7 +628,7 @@
 					</li>
 
 					<!-- datetime-local -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4><span class="t_black html5_small">datetime-local</span> : <span class="t_blue">&lt;input type="datetime-local"&gt;</span></h4>
 						<p class="mt_ms">
 							날짜와 시간을 선택할 수 있는 입력 필드를 정의합니다.(year, month, day, hour, minute)<br>
@@ -652,7 +652,7 @@
 					</li>
 
 					<!-- month -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4><span class="t_black html5_small">month</span> : <span class="t_blue">&lt;input type="month"&gt;</span></h4>
 						<p class="mt_ms">
 							날짜를 선택할 수 있는 입력 필드를 정의합니다.(year, month)<br>
@@ -670,7 +670,7 @@
 					</li>
 
 					<!-- week -->
-					<li class="tit_h4 mt_xl t_black">
+					<li class="tit_h4 mt_xl">
 						<h4><span class="t_black html5_small">week</span> : <span class="t_blue">&lt;input type="week"&gt;</span></h4>
 						<p class="mt_ms">
 							날짜를 선택할 수 있는 입력 필드를 정의합니다.(year, week)<br>
