--- a/main.html
+++ b/main.html
@@ -53,19 +53,39 @@
 
 	<article class="main_editor">
 		<h2 class="fas"><span>UXKM <i>E</i>ditor</span></h2>
-		<div class="txt">
+		<!--
+		<div class="txt" style="display:none">
 			<p>
 				‘코드미러’ 라이브러리를 이용하여 자체개발한<br class="dp_mb" />
-				<b>UXKM Editor</b>로 모든 강의의 예제를 표현합니다.
+				<b>UXKM Editor</b>로 강의의 예제를 표현합니다.
 			</p>
-
 			<p class="dp_pc"><i>코드와 결과물을 한 눈에 확인</i>할 수 있고, 테스트한 코드를 <i>html 파일로 다운로드</i>할 수 있습니다.</p>
 			<p class="dp_pc">Reset 기능을 이용하여 언제든지 예제 코드로 초기화 할 수 있기 때문에 마음껏 테스트 할 수 있습니다.</p>
 			<p class="dp_pc">info button을 클릭하여 자세한 기능을 확인할 수 있으며, <br>아래 에디터기에서 <i>코드를 테스트 할 수 있습니다</i>.</p>
-
 			<p class="dp_mb"><i>코드와 결과물을 한 눈에 확인</i>할 수 있으며,</p>
 			<p class="dp_mb">아래 에디터기에서 <i>코드를 테스트 할 수 있습니다</i>.</p>
 		</div>
+		-->
+		<div class="txt">
+			<p>
+				‘코드미러’ 라이브러리를 이용하여 자체개발한<br class="dp_mb" />
+				<b>UXKM Editor</b>로 강의의 예제를 표현합니다.
+			</p>
+			<p>
+				에디터기에서 코드를 작성하면 오른쪽 Result 영역의<br class="dp_mb" />
+				브라우저에 <i>실시간으로 반영</i>됩니다.<br>
+				<i>Desktop 환경에서 에디터기 작성이 가능</i>하며,<br class="dp_mb" />
+				Device 환경에서는 코드와 결과물 확인만 가능합니다.
+			</p>
+		</div>
+		<ul class="info_txt">
+			<li class="info">각 버튼의 기능을 확인할 수 있습니다.</li>
+			<li class="reset">초기 코드로 되돌립니다. <span class="dp_in_pc">에디터기를 마음껏 테스트 할 수 있습니다.</span></li>
+			<li class="download"><span class="dp_in_pc">초기 코드 및 테스트 한 </span>코드를 html 파일로 다운로드할 수 있습니다.</li>
+			<li class="fullscreen dp_pc">에디터기를 브라우저 기준 전체영역으로 확장하여 사용할 수 있습니다.</li>
+			<li class="fullscreen dp_mb">에디터기를 브라우저 전체영역으로 확장합니다.</li>
+			<li class="browser">Result 영역의 브라우저를 닫았을 때 다시 켤 수 있습니다. 브라우저를 닫았을 때 버튼이 보여집니다.</li>
+		</ul>
 
 		<div class="editor_wrap" data-target="none">
 			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
