--- a/ukncs/uxkm-accessibility.html
+++ b/ukncs/uxkm-accessibility.html
@@ -44,8 +44,88 @@
 		<h2 id="cTtitle">ACCESSIBILITY</h2>
 		<section class="ukbody">
 
+<!-- 
 
-			<p class="coming">자료 준비중입니다.</p>
+1. 웹 접근성
+1.1 웹 접근성이란?
+1.2 준수 고려사항
+1.3 웹 브라우징에 쓰인는 보조과학기술
+1.4 시각장애인용 스크린리더란?
+
+2. WA(Web Accessibility) 인증 마크
+2.1. 웹 접근성 품질마크란?
+2.2. 배경
+2.3. 인증대상
+2.4. 기대효과
+2.5. 인증 유효기간
+2.6. 웹 접근성 품질인증기관
+
+3. 한국형 웹 콘텐츠 접근성 지침 2.1(KWCAG 2.1)  - (Korean Web Content Accessibility Guidelines 2.1)
+3.1. 용어정의
+3.2. 한국형 웹 콘텐츠 접근성 지침 2.1 개요 (원칙 4개, 지침 13개, 검사 항목 24개)
+
+4. 웹 접근성을 고려한 콘텐츠 제작 방법
+
+5. 인식의 용이성(perceivable) - 지침 3개, 검사 항목 7
+5.1. 대체 텍스트
+5.1.1. (적절한 대체 텍스트 제공) 텍스트 아닌 콘텐츠는 그 의미나 용도를 인식할 수 있도록 대체 텍스트를 제공해야 한다.
+5.2. 멀티미디어 대체 수단
+5.2.1. (자막 제공) 멀티미디어 콘텐츠에는 자막, 대본 또는 수화를 제공해야 한다.
+5.3. 명료성
+5.3.1. (색에 무관한 콘텐츠 인식) 콘텐츠는 색에 관계없이 인식될 수 있어야 한다.
+5.3.2. (명확한 지시 사항 제공) 지시 사항은 모양, 크기, 위치, 방향, 색, 소리 등에 관계없이 인식될 수 있어야 한다.
+5.3.3. (텍스트 콘텐츠의 명도 대비) 텍스트 콘텐츠와 배경 간의 명도 대비는 4.5 대 1 이상이어야 한다.
+5.3.4. (자동 재생 금지) 자동으로 소리가 재생되지 않아야 한다.
+5.3.5. (콘텐츠 간의 구분) 이웃한 콘텐츠는 구별될 수 있어야 한다.
+
+6. 운용의 용이성(operable) - 지침 4개, 검사 항목 9개
+6.1. 입력장치 접근성
+6.1.1. (키보드 사용 보장) 모든 기능은 키보드만으로도 사용할수 있어야 한다.
+6.1.2. (초점 이동) 키보드에 의한 초점은 논리적으로 이동해야 하며 시각적으로 구별할 수 있어야 한다.
+6.1.3. (조작 가능) 사용자 입력 및 컨트롤은 조작 가능하도록 제공되어야 한다.
+6.2. 충분한 시간 제공2
+6.2.1. (응답시간 조절) 시간제한이 있는 콘텐츠는 응답시간을 조절할 수 있어야 한다.
+6.2.2. (정지 기능 제공) 자동으로 변경되는 콘텐츠는 움직임을 제어할 수 있어야 한다.
+6.3. 광과민성 발작 예방
+6.3.1. (깜빡임과 번쩍임 사용 제한) 초당 3~50 회 주기로 깜빡이거나 번쩍이는 콘텐츠를 제공하지 않아야 한다.
+6.4. 쉬운 내비게이션
+6.4.1. (반복 영역 건너뛰기) 콘텐츠의 반복되는 영역은 건너뛸수 있어야 한다.
+6.4.2. (제목 제공) 페이지, 프레임, 콘텐츠 블록에는 적절한 제목을 제공해야 한다. 
+6.4.3. (적절한 링크 텍스트) 링크 텍스트는 용도나 목적을 이해할 수 있도록 제공해야 한다.
+
+7. 이해의 용이성(understandable) - 지침 4개, 검사 항목 6개
+7.1. 가독성
+7.1.1. (기본 언어 표시) 주로 사용하는 언어를 명시해야 한다.
+7.2. 예측 가능성
+7.2.1. (사용자 요구에 따른 실행) 사용자가 의도하지 않은 기능(새 창, 초점에 의한 맥락 변화 등)은 실행되지 않아야 한다.
+7.3. 콘텐츠의 논리성
+7.3.1. (콘텐츠의 선형 구조) 콘텐츠는 논리적인 순서로 제공해야 한다. 
+7.3.2. (표의 구성) 표는 이해하기 쉽게 구성해야 한다.
+7.4. 입력 도움
+7.4.1. (레이블 제공) 사용자 입력에는 대응하는 레이블을 제공해야 한다. 
+7.4.2. (오류 정정) 입력 오류를 정정할 수 있는 방법을 제공해야 한다.
+
+8. 견고성(robust) - 지침 2개, 검사 항목 2개
+8.1. 문법 준수
+8.1.1. (마크업 오류 방지) 마크업 언어의 요소는 열고 닫음, 중첩 관계 및 속성 선언에 오류가 없어야 한다.
+8.2. 웹 애플리케이션 접근성
+8.2.1. (웹 애플리케이션 접근성 준수) 콘텐츠에 포함된 웹 애플리케이션은 접근성이 있어야 한다. 
+
+9. WCAG 2.1 - Web Content Accessibility Guidelines 2.1 - 4개 원칙, 17개 지침, 77개 검사항목
+9.1. 인식의 용이성(Perceivable) - 4개, 29개
+9.2. 운용의 용이성(Operable) - 5개, 28개
+9.3. 이해의 용이성(Understandable) - 3개, 17개
+9.4. 견고성(Robust) - 1개, 3개
+
+10. KWACG2.1 VS WCAG 2.1 비교 분석
+
+11. WAI-ARIA(Web Accessibility Initiative – Accessible Rich Internet Applications)
+
+
+참고자료
+
+ -->
+
 
 			<hr title="Separator for Contents">
 
@@ -64,6 +144,38 @@
 					<dt>참조</dt>
 					<dd><a href="#" target="_blank" title="새 창 열림">참조문서</a></dd>
 				</dl>
+<!-- 
+https://nuli.navercorp.com/community/article/1132969
+https://t-kachu-1004.tistory.com/16
+https://happysos.tistory.com/10
+https://web-for-all.tistory.com/2
+https://tink.uk/accessibility-support-for-css-generated-content/
+https://web-for-all.tistory.com/2
+https://thinkofweb.net/128
+https://kimtoma.com/2020/04/14/ui-color-contrast-check/
+https://medium.com/@barosmk/adobe-xd%EB%A5%BC-%ED%99%9C%EC%9A%A9%ED%95%9C-%EC%84%9C%EB%B9%84%EC%8A%A4-%EA%B8%B0%ED%9A%8D-%EA%B8%B0%EC%B4%88-826f97105c3d
+https://medium.com/@haecha_/figma-%ED%94%BC%EA%B7%B8%EB%A7%88-%ED%94%8C%EB%9F%AC%EA%B7%B8%EC%9D%B8-%EC%BB%AC%EB%9F%AC-%EC%8A%A4%ED%83%80%EC%9D%BC-6e6f0ea93ace
+https://marketplace.visualstudio.com/items?itemName=deque-systems.vscode-axe-linter
+https://v3.vuejs.org/guide/a11y-semantics.html#labels
+https://vue-a11y.com/project/#vue-accessibility-day
+https://developer.mozilla.org/ko/docs/Learn/Tools_and_testing/Client-side_JavaScript_frameworks/Vue_first_component
+https://madewithvuejs.com/blog/top-vue-js-slider-components
+https://vuejsexamples.com/tag/a11y/
+http://vuejscomponent.com/vue-simple-range-slider
+
+https://www.w3.org/WAI/fundamentals/components/
+https://www.w3.org/WAI/fundamentals/accessibility-principles/ko
+https://www.w3.org/WAI/WCAG21/quickref/
+http://www.kwacc.or.kr/WAI/wcag21/
+https://www.w3.org/WAI/ER/tools/
+https://romeo.elsevier.com/accessibility_checklist/
+https://webaim.org/techniques/css/invisiblecontent/
+https://wave.webaim.org/
+https://www.elsevier.com/about/accessibility
+https://developer.mozilla.org/en-US/docs/Learn/Accessibility/WAI-ARIA_basics
+https://www.powermapper.com/tests/screen-readers/aria/
+
+ -->
 			</section>
 			<!-- //.uksection -->
 
