- 전급성 페이지 생성

--- a/assets/04-accessibility/info.html
+++ b/assets/04-accessibility/info.html
@@ -1,4 +1,14 @@
 
 <ul>
-	<li>설명글 추가 필요</li>
+	<li>
+		UXKM에서 다루는 웹 접근성은 기본 개요와 화면낭독기에 대한 간략설명 및
+		한국형 웹 콘텐츠 접근성 지침 2.1(KWCAG 2.1) 과 WCAG 2.1에 대한 설명을 다루고 있으며,
+		WAI-ARIA기술에 대한 설명을 다루고자 하였습니다.
+	</li>
+	<li>
+		웹 접근성은 작업하면서 필수로 해야하는 작업입니다.
+	</li>
+	<li>
+		UXKM에서는 웹 접근성에 대해서 초안을 작업하고 점점 더 보완하면서 부족한 부분에 대한 내용은 채워나가려고 합니다.
+	</li>
 </ul>
