--- a/main.html
+++ b/main.html
@@ -3,7 +3,13 @@
 		<h2 class="sound_only">Intro</h2>
 		<div class="txt_box">
 			<div class="tit">
-				<strong class="t1">UXCSS <span>&</span> 921430KM</strong>
+				<strong class="t1">
+					<!--<em>FOR ALL UI DEVELOPERS</em><br>-->
+					<!--<em>모든 ui개발자를 위해</em><br>-->
+					<!--For anyone starting<br>
+					ui development.<br>-->
+					UXCSS <span>&</span> 921430KM
+				</strong>
 				<strong class="t2">COLLABORATION</strong>
 			</div>
 			<!--<p>Created by. Dae-min, Kim & Kwang-nam, Yang & Kyo-sung, Chu </p>-->
