- KWCAG 2.1 개요 수정

--- a/assets/04-accessibility/03-waKwcag/01-waKwcag.html
+++ b/assets/04-accessibility/03-waKwcag/01-waKwcag.html
@@ -227,7 +227,7 @@
 				<p class="mt_ms">
 					시간을 통제할 수 없도록 구현된 콘텐츠를 말합니다. 시간제한이 있는 콘텐츠의 예는 다음과 같습니다.
 				</p>
-				<ol class="ol_lst indent mt_s">
+				<ol class="ol_lst_second indent mt_s">
 					<li>자동 갱신되도록 구성된 콘텐츠</li>
 					<li>몇 초 후에 다른 페이지로 이동하도록 구성된 콘텐츠</li>
 					<li>자동적으로 스크롤 되는 콘텐츠</li>
