[접근성] - 콘텐츠제작기법 내용 정리

--- a/ukncs/uxkm-accessibility.html
+++ b/ukncs/uxkm-accessibility.html
@@ -558,7 +558,8 @@
 						정보 접근성은 모든 사용자가 특정 환경이나 신체적 장애에 상관없이 웹 사이트나 애플리케이션에서 제공하는<br>
 						모든 정보에 동등하게 접근하고 이용할 수 있도록 보장해 주는 것입니다.<br>
 						장애인뿐만 아니라 고령자, 비장애인도 접근성의 대상이 되며 4가지 핵심원리는 다음과 같습니다.<br>
-						각 지침을 4가지 원칙의 범주로 분류하여 제공합니다. 인식 가능하고, 조작 가능하며, 이해 할 수 있고, 견고 해야 합니다.
+						각 지침을 4가지 원칙의 범주로 분류하여 제공합니다. 인식 가능하고, 조작 가능하며, 이해 할 수 있고, 견고 해야 합니다.<br>
+						크게 4가지 원칙 기준에 맞추어서 제작을 하며, 제작한 평가는 진단도구를 활용하여 진행합니다. 
 					</p>
 				</blockquote>
 				<article>
@@ -584,10 +585,182 @@
 							<p>질문 : 특정 운영체제 또는 브라우저에서만 서비스를 이용할 수 있지 않나요?</p>
 						</li>
 					</ul>
+				</article>
+
+				<h3>다양한 사용자를 향한 폭넓은 이해</h3>
+				<article>
+					<dl>
+						<dt>전맹 사용자</dt>
+						<dd>시각을 통해 화면의 이미지 정보를 인식하기 어려워서 화면의 텍스트를 음성으로 읽어주는 화면 낭독 프로그램(스크린 리더)를 이용합니다.</dd>
+						<dt>색각이상 사용자</dt>
+						<dd>특정한 색 또는 색상 구별 자체가 어려워 색으로만 구분자를 표시할 경우 인지하기 어렵습니다.</dd>
+						<dt>고령자와 약시자</dt>
+						<dd>통상적인 크기의 폰트는 인식하기 어려워 폰트 확대 기능 또는 프로그램이 필요합니다.</dd>
+						<dt>청각장애 사용자</dt>
+						<dd>동영상의 음성, 오디오, 알람과 같은 청각 콘텐츠는 인식할 수 없습니다.</dd>
+						<dt>뇌병변 장애 및 지체장애 사용자</dt>
+						<dd>마우스와 같은 포인팅 장치를 이용하지 않는 사용자는 키보드만으로도 모든 정보의 접근 및 조작이 가능해야 합니다.</dd>
+						<dt>일시적 장애를 겪고 있는 사용자</dt>
+						<dd>사고로 인해 일시적으로 신체의 일부를 활용하지 못하거나 갑자기 극심한 불안감을 느껴 발작을 일으키는 사용자도 고려해야 합니다.</dd>
+						<dt>일반 사용자</dt>
+						<dd>
+							<ul>
+								<li>직사광선이나 조명이 반사되는 장소에 설치된 모니터에 표시되는 콘텐츠는 인식하기 어렵습니다.</li>
+								<li>매우 작은 폰트를 사용하는 콘텐츠는 알아보기 힘듭니다.</li>
+								<li>흑백 모니터를 사용할 경우엔 콘텐츠의 색을 구별하기 어렵습니다.</li>
+								<li>스피커가 고장난 상황이나 소음이 매우 심한 환경에서 청각을 이용하는 영상이나 음성 콘텐츠는 감상하기 힘듭니다.</li>
+								<li>한 손으로 물건을 들고 있는 경우, 나머지 한 손으로만 PC나 모바일을 조작해야 합니다.</li>
+							</ul>
+						</dd>
+					</dl>
+				</article>
+
+				<h3>정보 접근성 지침 이해하기</h3>
+				<article>
+					<dl>
+						<dt>대체 텍스트</dt>
+						<dd>
+							<p>눈으로 화면을 볼 수 없는 경우, 이미지에 대한 설명을 대체 텍스트로 입력하여 스크린리더를 통해 정보를 인식하게 도와줍니다.</p>
+							<p>텍스트 아닌 콘텐츠는 그 의미나 용도를 인식할 수 있도록 대체 텍스트를 제공해야 합니다.</p>
+						</dd>
+						<dt>자막 제공</dt>
+						<dd>
+							<p>음성을 귀로 듣지 못할 경우, 시각을 이용해서 내용을 이해하므로 멀티미디어 콘텐츠에는 자막, 대본 또는 수화를 제공해야 합니다.</p>
+						</dd>
+						<dt>콘텐츠 구분</dt>
+						<dd>
+							<p>특정한 색을 구별할 수 없는 사용자나 흑백 디스플레이 사용자와 같이 색상만으로 콘텐츠를 구분하지 못할 경우, 다양한 감각을 통해서 인식하므로 화면에 표시되는 모든 정보는 두 가지 이상의 구분자가 필요합니다.</p>
+						</dd>
+						<dt>명도 대비</dt>
+						<dd>
+							<p>저시력자, 고령자 등도 인식할 수 있도록 콘텐츠와 배경 간의 명도 대비는 4.5:1 이상이어야 합니다.</p>
+						</dd>
+						<dt>초점 이동</dt>
+						<dd>
+							<p>마우스와 같은 포인팅 장치를 이용하기 어려운 시각/지체 장애 사용자는 키보드만으로도 모든 정보의 접근 및 조작이 가능해야 하기 때문에 키보드에 의한 초점은 논리적으로 이동해야 하며 시각적으로 구별할 수 있어야 합니다.</p>
+						</dd>
+						<dt>조작 가능</dt>
+						<dd>
+							<p>손떨림이 심하여 미세한 조작이 어려운 경우와 같이 운동 장애가 있는 경우에도 사용자 입력 및 컨트롤은 조작이 가능하도록 제공되어야 합니다.</p>
+						</dd>
+						<dt>재생 조절 가능</dt>
+						<dd>
+							<p>손떨림이 심하여 미세한 조작이 어려운 경우와 같이 운동 장애가 있는 경우에도 사용자 입력 및 컨트롤은 조작이 가능하도록 제공되어야 합니다.</p>
+						</dd>
+						<dt>사용자 요구에 따른 실행</dt>
+						<dd>
+							<p>시각이나 청각 장애가 있는 사용자가 직접 마우스로 클릭하거나 키보드로 입력하지 않고도 자동으로 팝업 창이 오픈되거나 새로운 기능이 실행되면 그것을 인지하기 어렵습니다.</p>
+							<p>그러므로 사용자가 의도하지 않은 기능(새 창, 초점에 의한 맥락 변화 등)은 실행되지 않아야 합니다.</p>
+						</dd>
+						<dt>오류 정정</dt>
+						<dd>
+							<p>화면 낭독 프로그램을 이용하는 (시각 장애)사용자의 경우, 입력 오류가 발생했을 때 무엇이 잘못 되었는지 알 수가 없어서 입력 전체를 포기할 가능성이 있습니다.</p>
+							<p>그러므로 입력 오류가 발생할 경우 이를 쉽게 찾아서 정정할 수 있는 방법을 제공해야 합니다.</p>
+						</dd>
+					</dl>
+				</article>
+
+				<h3>접근성 지원 도구</h3>
+				<article>
+					<dl>
+						<dt>스크린 리더</dt>
+						<dd>
+							<p>컴퓨터나 모바일을 사용할 때 화면에 표시되는 입출력 정보를 음성으로 알려주는 프로그램입니다.</p>
+							<ul>
+								<li>센스리더</li>
+								<li>NVDA</li>
+								<li>JAWS</li>
+								<li>TalkBack</li>
+								<li>VoiceOver</li>
+							</ul>
+						</dd>
+						<dt>명도 대비</dt>
+						<dd>
+							<p>전경색과 배경색의 명도 차이를 비교할 수 있게 도와주는 확장 프로그램과 화면을 고대비로 전환할 수 있는 프로그램입니다.</p>
+							<ul>
+								<li>Colour Contrast Analyser</li>
+								<li>Contrast Ratio</li>
+								<li>고대비</li>
+							</ul>
+						</dd>
+						<dt>접근성 자동 진단</dt>
+						<dd>
+							<p>접근성을 개선이 필요한 부분을 자동으로 검출해주는 프로그램입니다.</p>
+							<ul>
+								<li>PC(WAVE)</li>
+								<li>모바일(Android)</li>
+								<li>WATCH2.0</li>
+							</ul>
+						</dd>
+						<dt>웹 브라우저 개발자 도구</dt>
+						<dd>
+							<p>웹 콘텐츠 구성 요소를 탐색할 수 있으며 대부분의 브라우저가 지원합니다.</p>
+							<ul>
+								<li>(Chrome) Web Developer</li>
+								<li>(Firefox) Web Developer</li>
+								<li>Firebug</li>
+							</ul>
+						</dd>
+					</dl>
+				</article>
+
+				<h3>구성요소</h3>
+				<article>
 					<figure>
 						<img src="images/wa/img_specs.png" alt="다른 요소에 대한 지침들을 보여주는 삽화. 자세한 설명은 다음 링크 참고 : https://www.w3.org/WAI/intro/components-desc.html#guid">
-						<figcaption>출처 : https://www.w3.org/WAI/standards-guidelines/ko#atag</figcaption>
+						<figcaption>[구성 요소에 대한 지침] 출처 : https://www.w3.org/WAI/standards-guidelines/ko#atag</figcaption>
 					</figure>
+					<dl>
+						<dt>개발자(Developers)</dt>
+						<dd>
+							<ul>
+								<li>
+									<strong>저작도구(Authoring Tools)</strong>
+									<p>웹 사이트를 제작할 수 있게 도와주는 소프트웨어</p>
+								</li>
+								<li>
+									<strong>평가도구(Evaluation Tools)</strong>
+									<p>웹 접근성 평가도구, HTML/CSS 타당성 검사기 등</p>
+									<p>웹 접근성 준수 여부 평가도구</p>
+								</li>
+							</ul>
+						</dd>
+						<dt>사용자(Users)</dt>
+						<dd>
+							<ul>
+								<li>
+									<strong>웹브라우저, 미디어 플레이어(Browsers, Media Players)</strong>
+									<p>웹 상의 콘텐츠를 사용자들이 이용할 수 있도록 도와주는 도구</p>
+								</li>
+								<li>
+									<strong>보조기술(Assistive Technologies)</strong>
+									<p>화면낭독 프로그램(Screen reader), 대체 키보드, 스위치, 스캐닝 소프트웨어, 화면 확대 프로그램 등</p>
+								</li>
+							</ul>
+						</dd>
+						<dt>공통</dt>
+						<dd>
+							<ul>
+								<li>
+									<strong>콘텐츠(Contents)</strong>
+									<p>웹 페이지 또는 웹 어플리케이션에 있는 정보</p>
+									<p>텍스트, 이미지, 소리 정보와 같은 자연적인 정보 (natural information)</p>
+									<p>구조와 표현 등을 정의하는 코드나 마크업</p>
+								</li>
+								<li>
+									<strong>가이드라인</strong>
+									<p>웹 콘텐츠 접근성 가이드라인(WCAG, Web Content Accessibility Guidelines)</p>
+									<p>저작 도구 접근성 가이드라인(ATAG, Authoring Tool Accessibility Guidelines)</p>
+									<p>사용자 도구 접근성 가이드라인(UAAG, User Agent Accessibility Guidelines)</p>
+								</li>
+								<li>
+									<strong>기술 사양</strong>
+									<p>웹 접근성을 지원하기 위한 기술 사양</p>
+									<p>HTML, XML, CSS, SVG, SMIL 등</p>
+								</li>
+							</ul>
+						</dd>
+					</dl>
 				</article>
 				
 				
@@ -595,6 +768,8 @@
 					<dt>참조</dt>
 					<dd>
 						<a href="https://www.w3.org/WAI/standards-guidelines/ko#atag" target="_blank" title="새 창 열림">W3C 접근성 기준 개요</a>
+						<a href="https://www.wah.or.kr:444/Participation/technique.asp?tab=1" target="_blank" title="새 창 열림">웹접근성 연구소 웹 콘텐츠 제작기법</a>
+						<a href="https://accessibility.naver.com/accessibility" target="_blank" title="새 창 열림">NAVER 접근성</a>
 					</dd>
 				</dl>
 			</section>
