--- a/assets/06-framework/01-gulp/note.html
+++ b/assets/06-framework/01-gulp/note.html
@@ -1,7 +1,14 @@
 
-<blockquote class="uk_note" role="note">
-	<h2 class="sound_only">요약 설명</h2>
-	<ul>
-		<li>gulp info</li>
-	</ul>
+<!--
+ -->
+<blockquote class="uk_note sound_only" role="note">
+	<h2>gulp js</h2>
+	<h3>A toolkit to automate & enhance your workflow</h3>
+	<p>
+		Leverage gulp and the flexibility of JavaScript to automate slow, repetitive workflows and compose them into efficient build pipelines.
+	</p>
 </blockquote>
+
+<div class="dp_pc">
+	<img src="ukncs/images/gulp/gulp_logo.svg" width="350" alt="gulp js">
+</div>
