- gulp 기본 세팅 및 scss 컴파일 완료

--- a/assets/06-framework/01-gulp/02-gulp_two.html
+++ b/assets/06-framework/01-gulp/02-gulp_two.html
@@ -115,7 +115,7 @@
 		<p class="mt_s">
 			웹스톰, 비주얼스튜디오 등 여러 에디터기의 Live Sass Compiler를 사용하면 간단하게 SCSS 컴파일이 가능하지만,
 			공동 작업이 많은 개발 환경인 경우 다른 작업자의 환경을 고려하지 않을 수 없습니다.<br>
-			gulp-sass플러그인을 gulp에 연결해두면 OS상관없이 npm만 돌기면 되기에 gulp-sass설치를 추천합니다.
+			gulp-sass플러그인을 gulp에 연결해두면 OS상관없이 npm만 돌리면 되기에 gulp-sass설치를 추천합니다.
 		</p>
 
 		<ol class="ol_lst indent">
