- gulp 기본 세팅 및 scss 컴파일 완료

--- a/assets/06-framework/01-gulp/02-gulp_two.html
+++ b/assets/06-framework/01-gulp/02-gulp_two.html
@@ -76,7 +76,7 @@
 				<p class="mt_ms">
 					명령프롬프트에서 아래의 명령을 한줄씩 차례로 입력합니다. (입력 후 엔터는 필수입니다.)
 				</p>
-				<div class="terminal_code_box mt_s">
+				<div class="terminal_code_box mt_ms">
 					<textarea>
 						npm install gulp-cli -g              //Gulp 전역 설치(전역 설치이기에 최초 한번만 설치하면 됩니다.)
 						npm init                             //package.json 설치
@@ -89,7 +89,7 @@
 					[폴더] node_modules<br>
 					[파일] gulpfile.js, package.json, package-lock.json
 				</p>
-				<p class="mt_s"><img src="ukncs/images/gulp/gulp-file-01.png" alt="gulp, package.json, gulpfile.js 설치"/></p>
+				<p class="mt_ms"><img src="ukncs/images/gulp/gulp-file-01.png" alt="gulp, package.json, gulpfile.js 설치"/></p>
 			</li>
 
 			<!-- 작업공간 생성 -->
@@ -100,7 +100,7 @@
 					작업공간의 정해진 이름은 없습니다. 보통 'src'로 하기 때문에 우리도 작업 폴더명을 'src'로 생성하겠습니다.<br>
 					'src'폴더 안에 'assets'폴더를 생성 후 CSS, 이미지, 폰트, js파일이 각각 들어가는 폴더를 생성합니다. 마찬가지로 정해진 폴더명은 없습니다.<br>
 				</p>
-				<p class="mt_s"><img src="ukncs/images/gulp/gulp-file-02.png" alt="기본 작업 폴더 생성"/></p>
+				<p class="mt_ms"><img src="ukncs/images/gulp/gulp-file-02.png" alt="기본 작업 폴더 생성"/></p>
 			</li>
 		</ol>
 	</section>
@@ -213,7 +213,7 @@
 					gulpfile.js를 만들었으니 SCSS를 컴파일해보겠습니다.<br>
 					우선 <mark>src > assets > css폴더</mark>에 <mark>style.scss</mark> 파일 생성합니다. 후 SCSS문법을 적용한 임시 스타일을 작성합니다.
 				</p>
-				<p class="mt_s"><img src="ukncs/images/gulp/gulp-file-03.png" alt="style.scss 생성"/></p>
+				<p class="mt_ms"><img src="ukncs/images/gulp/gulp-file-03.png" alt="style.scss 생성"/></p>
 
 				<p class="mt_ms">
 					<mark>style.scss</mark>에 SCSS문법을 적용한 <mark>임시 스타일을 작성</mark>합니다.
@@ -242,15 +242,15 @@
 				<p class="mt_ms">
 					<mark><code>gulp</code></mark>입력 후 엔터를 치면 아래 처럼 <mark>gulp</mark>가 실행되고,
 				</p>
-				<p class="mt_s"><img src="ukncs/images/gulp/gulp_t_scss_01.png" alt="gulp 실행"/></p>
+				<p class="mt_ms"><img src="ukncs/images/gulp/gulp_t_scss_01.png" alt="gulp 실행"/></p>
 
 				<p class="mt_ms">
-					<mark>dist</mark>폴더와 방금 컴파일 된 <mark>style.css</mark> 그리고 css 디버깅을 위한 <mark>style.css.map</mark>이 생성되있는 것을 확인할 수 있다.
+					<mark>dist</mark>폴더와 방금 컴파일 된 <mark>style.css</mark> 그리고 css 디버깅을 위한 <mark>style.css.map</mark>이 생성되있는 것을 확인할 수 있으며,
 				</p>
-				<p class="mt_s"><img src="ukncs/images/gulp/gulp-file-04.png" alt="dist폴더, style.css, style.css.map 생성"/></p>
+				<p class="mt_ms"><img src="ukncs/images/gulp/gulp-file-04.png" alt="dist폴더, style.css, style.css.map 생성"/></p>
 
 				<p class="mt_ms">
-					<mark>style.css</mark>파일을 확인해 보면 아래 처럼 SCSS의 중첩이나 변수가 컴파일 된 것을 확인할 수 있다.
+					<mark>style.css</mark>파일을 확인해 보면 아래 처럼 SCSS의 중첩이나 변수가 컴파일 된 것을 확인할 수 있습니다.
 				</p>
 				<div class="uk_gist_code_box mt_ms" data-tit="SCSS Complie">
 					<textarea>
