- gulp 기본 세팅 및 scss 컴파일 완료

--- a/assets/06-framework/01-gulp/02-gulp_scss.html
+++ b/assets/06-framework/01-gulp/02-gulp_scss.html
@@ -156,7 +156,7 @@
 						// 소스 파일 경로
 						const src = './src/assets';
 						const dist = './dist/assets';
-						// 작업폴더 경로 (여기서 작업할것을)
+						// 작업폴더 경로 ('src'에서 작업한 것을)
 						const PATH = {
 							ASSETS: {
 								CSS: src+'/css',
@@ -165,7 +165,7 @@
 								JS: src+'/js',
 							}
 						}
-						// 산출물 경로 (여기에 생성한다.)
+						// 산출물 경로 ('dist'에 생성한다.)
 						const DEST_PATH = {
 							ASSETS: {
 								CSS: dist+'/css',
